tests/fails/except_empty.rs
use aa_regex::*;

fn main() {
    let wrong = except!();
}
